# forest-phenology-tracking-system

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/fpts/api/: dependencies.py  main.py  schemas.py  wiring.py
src/fpts/api/routers/: debug.py  health.py  metrics.py  phenology.py
src/fpts/cache/: keys.py  ttl_cache.py
src/fpts/config/: settings.py
src/fpts/domain/: models.py
src/fpts/ingestion/: __main__.py  mod13q1.py
src/fpts/processing/: phenology_algorithm.py  phenology_service.py  raster_service.py
src/fpts/processing/batch/: __main__.py  process_year.py
src/fpts/query/: service.py
src/fpts/scripts/: make_mod13q1_fixture.py
src/fpts/sql/: phenology_metrics.sql
src/fpts/sql/queries/: phenology.py
src/fpts/storage/: local_raster_repository.py  phenology_repository.py  postgis_phenology_repository.py  raster_repository.py
src/fpts/utils/: logging.py  metrics.py
tests/: test_api.py  test_api_compute_mode.py  test_debug_raster_api.py
tests/fixtures/raw/mod13q1/2020/: doy_001.tif  doy_017.tif  doy_033.tif
tests/fixtures/raw/ndvi_synth/2020/: doy_001.tif  doy_050.tif  doy_100.tif  doy_150.tif  doy_200.tif  doy_250.tif  doy_300.tif
tests/integration/: conftest.py  test_api_postgis.py
tests/unit/: conftest.py  test_api_in_memory.py  test_debug_raster_api.py  test_metrics_endpoint.py  test_request_logging_middleware.py
